<resources>
    <string name="app_name">Quiz App</string>
    <string name="option_a">A</string>
    <string name="option_b">B</string>
    <string name="option_c">C</string>
    <string name="option_d">D</string>
    <string name="options">Options</string>
    <string name="question">Question</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="wrong_answer">Wrong answer</string>
    <string name="bookmark">Bookmark</string>
    <string name="go">Go</string>
    <string name="cancel">Cancel</string>
    <string name="enter_number">Enter number</string>
    <string name="exam">Exam</string>
    <string name="study">Study</string>
    <string name="practice">Practice</string>
    <string name="answer">Answer</string>
    <string name="sign_out">Sign Out</string>
    <string name="drawer_close">Drawer close</string>
    <string name="drawer_open">Drawer open</string>
    <string name="preference_profile_info_key">ProfileInfo</string>
    <string name="pref_profile_name_key">profile_name</string>
    <string name="pref_profile_phone_key">profile_phone</string>
</resources>
