<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".QuizPracticeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/questionView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:id="@+id/question_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/rounded_border_shape"
                        android:paddingBottom="5dp"
                        android:paddingHorizontal="20dp"
                        android:paddingTop="25dp"
                        android:text="ejnfefiuenfiunefunfjneijfjnfnfeiejnfienfiueuefjnijefn"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/questionId"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/rounded_border_shape"
                        android:paddingHorizontal="20dp"
                        android:paddingVertical="5dp"
                        android:text="@string/question"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/rounded_border_shape"
                        android:orientation="vertical"
                        android:paddingBottom="5dp"
                        android:paddingHorizontal="20dp"
                        android:paddingTop="25dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="10dp"
                            android:paddingVertical="10dp">

                            <TextView
                                android:id="@+id/option_a_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:background="@drawable/rounded_border_shape"
                                android:paddingLeft="33dp"
                                android:paddingRight="10dp"
                                android:paddingVertical="5dp"
                                android:text="Aziz Aziz"
                                android:textSize="20sp" />

                            <TextView
                                android:layout_width="36dp"
                                android:layout_height="36dp"
                                android:layout_alignParentStart="true"
                                android:layout_centerVertical="true"
                                android:background="@drawable/round_option"
                                android:gravity="center"
                                android:text="@string/option_a"
                                android:textColor="#FFF"
                                android:textSize="24sp"
                                android:textStyle="bold" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="10dp"
                            android:paddingVertical="10dp">

                            <TextView
                                android:id="@+id/option_b_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:background="@drawable/rounded_border_shape"
                                android:paddingLeft="33dp"
                                android:paddingRight="10dp"
                                android:paddingVertical="5dp"
                                android:text="Aziz Aziz"
                                android:textSize="20sp" />

                            <TextView
                                android:layout_width="36dp"
                                android:layout_height="36dp"
                                android:layout_alignParentStart="true"
                                android:layout_centerVertical="true"
                                android:background="@drawable/round_option"
                                android:gravity="center"
                                android:text="@string/option_b"
                                android:textColor="#FFF"
                                android:textSize="24sp"
                                android:textStyle="bold" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="10dp"
                            android:paddingVertical="10dp">

                            <TextView
                                android:id="@+id/option_c_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:background="@drawable/rounded_border_shape"
                                android:paddingLeft="33dp"
                                android:paddingRight="10dp"
                                android:paddingVertical="5dp"
                                android:text="Aziz Aziz"
                                android:textSize="20sp" />

                            <TextView
                                android:layout_width="36dp"
                                android:layout_height="36dp"
                                android:layout_alignParentStart="true"
                                android:layout_centerVertical="true"
                                android:background="@drawable/round_option"
                                android:gravity="center"
                                android:text="@string/option_c"
                                android:textColor="#FFF"
                                android:textSize="24sp"
                                android:textStyle="bold" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="10dp"
                            android:paddingVertical="10dp">

                            <TextView
                                android:id="@+id/option_d_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:background="@drawable/rounded_border_shape"
                                android:paddingLeft="33dp"
                                android:paddingRight="10dp"
                                android:paddingVertical="5dp"
                                android:text="Aziz Aziz"
                                android:textSize="20sp" />

                            <TextView
                                android:layout_width="36dp"
                                android:layout_height="36dp"
                                android:layout_alignParentStart="true"
                                android:layout_centerVertical="true"
                                android:background="@drawable/round_option"
                                android:gravity="center"
                                android:text="@string/option_d"
                                android:textColor="#FFF"
                                android:textSize="24sp"
                                android:textStyle="bold" />
                        </RelativeLayout>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/optionsId"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/rounded_border_shape"
                        android:paddingHorizontal="20dp"
                        android:paddingVertical="5dp"
                        android:text="@string/options"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </LinearLayout>

            <ProgressBar
                android:id="@+id/questionLoadProgressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />
        </RelativeLayout>
    </ScrollView>
</LinearLayout>